--- a/styles.sass
+++ b/styles.sass
@@ -220,6 +220,7 @@ body
     height: 55px
     display: flex
     align-items: center
+    z-index: 3
     &__button
         width: 55px
         height: 55px
@@ -274,6 +275,8 @@ body
         position: relative
         transition: 0.2s
         cursor: pointer
+        &--brighter
+            background-color: #F9F9F9
         &:hover
             transform: scale(1.02)
             -webkit-box-shadow: 4px -1px 8px -2px rgba(34, 60, 80, 0.31)
@@ -429,11 +432,11 @@ body
 .news
     background: #F5F5F5
     width: 100%
-    height: 1719px
     &__wrapper
         width: 1401px
         margin: 0 auto
         padding-top: 177px
+        padding-bottom: 526px
     &__description
         display: flex
         justify-content: space-between
@@ -459,12 +462,47 @@ body
         flex-wrap: wrap
         .card
             font-family: "Roboto"
-            width: 415px
-            height: 365px
-            background-image: url("./assets/png/news-backgraund-1.png")
-            overflow: hidden
             position: relative
-            border-radius: 45px 0px 0px 0px
+            filter: drop-shadow(0px 40px 80px rgba(0, 0, 0, 0.05))
+            &__wrapper
+                width: 415px
+                height: 365px
+                background-image: url("./assets/png/news-backgraund-1.png")
+                position: relative
+                border-radius: 45px 0px 0px 0px
+                transition: box-shadow 0.3s ease-in-out
+                overflow: hidden
+            &__date
+                overflow: visible
+                top: 65px
+                right: -25px
+                position: absolute
+                display: flex
+                align-items: center
+                justify-content: center
+                flex-direction: column
+                z-index: 3
+                width: 50px
+                height: 97px
+                background-color: #FFFFFF
+                border-radius: 15px
+                box-shadow: 6px 6px 30px rgba(0, 0, 0, 0.06)
+                -webkit-box-shadow: 6px 6px 30px rgba(0, 0, 0, 0.06)
+                -moz-box-shadow: 6px 6px 30px rgba(0, 0, 0, 0.06)
+            &__day
+                text-align: center
+                font-weight: 900
+                font-size: 20px
+                line-height: 23px
+                color: #292D32
+                margin-bottom: 3px
+            &__month
+                text-align: center
+                font-weight: 500
+                font-size: 10px
+                padding-top: 6px
+                line-height: 16px
+                color: #292D32
             &__backgraund-img
                 width: 415px
                 height: 259px
@@ -474,7 +512,6 @@ body
                 &:hover
                     transform: scale(1.1)
             &__img-part-one
-                border: 1px solid red
                 top: 219px
                 width:415px
                 height: 146px
@@ -482,9 +519,8 @@ body
                 z-index: 1
             &__img-part-two
                 right: 11.91px
-                 border: 1px solid red
                 width: 95.09px
-                height: 35.21px
+                height: 36.21px
                 top: 242.5px
                 z-index: 2
                 position: absolute
@@ -525,3 +561,106 @@ body
                 font-size: 14px
                 line-height: 21px
                 color: #292D32
+
+.form
+    width: 100%
+    height: 676px
+    background-color: #EEEEEE
+    &__wrapper
+        width: 1920px
+        margin: 0 auto
+        position: relative
+    &__content
+        width: 1400px
+        margin: 0 auto
+        border-radius: 20px
+        position: absolute
+        display: flex
+        height: 842px
+        overflow: hidden
+        top: -346px
+        left: 0px
+        right: 0px
+    &__contacts
+        height: 842px
+        width: 700px
+        background-color: #F9F9F9
+    .contacts
+        padding-top: 100px
+        padding-left: 100px
+        &__header
+            height: 91px
+            width: 473px
+            display: flex
+            justify-content: space-between
+            flex-direction: column
+            margin-bottom: 47.17px
+        &__title
+            font-weight: 400
+            font-size: 50px
+            line-height: 50px
+            color: #292D32
+        &__description
+            font-weight: 400
+            font-size: 16px
+            line-height: 24px
+            color: #838383
+        &__list
+            width: 413px
+            height: 393px
+            display: flex
+            flex-direction: column
+            justify-content: space-between
+            margin-bottom: 61px
+            .item
+                width: 410px
+                height: 103px
+                &__wrapper
+                    display: flex
+                    align-items: center
+                    &--email
+                        padding-top:4px
+                &__icon-wrapper
+                    height: 38px
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    transition: 0.4s
+                    &:hover
+                        transform: scale(1.1)
+                    &:active
+                        transform: scale(0.925)
+                &__icon
+                    margin-right: 18px
+                    &:hover
+                        transform: scale(1.1)
+                &__title
+                    font-weight: 400
+                    font-size: 18px
+                    line-height: 24px
+                    color: #838383
+                &__info
+                    padding-top:0px
+                    padding-left: 56px
+                    font-weight: 400
+                    font-size: 22px
+                    line-height: 33px
+                    color: #292D32
+        .social
+            width: 96.71px
+            height: 37.71px
+            display: flex
+            justify-content: space-between
+            align-items: center
+            padding-left: 3px
+            &__icon
+                transition: 0.4s
+                height: 37.71px
+                cursor: pointer
+                &:hover
+                    transform: scale(1.1)
+                &:active
+                    transform: scale(0.925) 
+    &__request
+        width: 700px
+        background-color: #292D32 
