--- a/styles/styles.css
+++ b/styles/styles.css
@@ -382,6 +382,7 @@ body {
   height: 55px;
   display: flex;
   align-items: center;
+  z-index: 3;
 }
 .link__button {
   width: 55px;
@@ -444,6 +445,9 @@ body {
   position: relative;
   transition: 0.2s;
   cursor: pointer;
+}
+.catalog .card--brighter {
+  background-color: #F9F9F9;
 }
 .catalog .card:hover {
   transform: scale(1.02);
@@ -629,12 +633,12 @@ body {
 .news {
   background: #F5F5F5;
   width: 100%;
-  height: 1719px;
 }
 .news__wrapper {
   width: 1401px;
   margin: 0 auto;
   padding-top: 177px;
+  padding-bottom: 526px;
 }
 .news__description {
   display: flex;
@@ -669,12 +673,51 @@ body {
 }
 .news__cards .card {
   font-family: "Roboto";
+  position: relative;
+  filter: drop-shadow(0px 40px 80px rgba(0, 0, 0, 0.05));
+}
+.news__cards .card__wrapper {
   width: 415px;
   height: 365px;
   background-image: url("./assets/png/news-backgraund-1.png");
-  overflow: hidden;
   position: relative;
   border-radius: 45px 0px 0px 0px;
+  transition: box-shadow 0.3s ease-in-out;
+  overflow: hidden;
+}
+.news__cards .card__date {
+  overflow: visible;
+  top: 65px;
+  right: -25px;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  z-index: 3;
+  width: 50px;
+  height: 97px;
+  background-color: #FFFFFF;
+  border-radius: 15px;
+  box-shadow: 6px 6px 30px rgba(0, 0, 0, 0.06);
+  -webkit-box-shadow: 6px 6px 30px rgba(0, 0, 0, 0.06);
+  -moz-box-shadow: 6px 6px 30px rgba(0, 0, 0, 0.06);
+}
+.news__cards .card__day {
+  text-align: center;
+  font-weight: 900;
+  font-size: 20px;
+  line-height: 23px;
+  color: #292D32;
+  margin-bottom: 3px;
+}
+.news__cards .card__month {
+  text-align: center;
+  font-weight: 500;
+  font-size: 10px;
+  padding-top: 6px;
+  line-height: 16px;
+  color: #292D32;
 }
 .news__cards .card__backgraund-img {
   width: 415px;
@@ -687,7 +730,6 @@ body {
   transform: scale(1.1);
 }
 .news__cards .card__img-part-one {
-  border: 1px solid red;
   top: 219px;
   width: 415px;
   height: 146px;
@@ -696,9 +738,8 @@ body {
 }
 .news__cards .card__img-part-two {
   right: 11.91px;
-  right-border: 1px solid red;
   width: 95.09px;
-  height: 35.21px;
+  height: 36.21px;
   top: 242.5px;
   z-index: 2;
   position: absolute;
@@ -746,4 +787,131 @@ body {
   font-size: 14px;
   line-height: 21px;
   color: #292D32;
+}
+
+.form {
+  width: 100%;
+  height: 676px;
+  background-color: #EEEEEE;
+}
+.form__wrapper {
+  width: 1920px;
+  margin: 0 auto;
+  position: relative;
+}
+.form__content {
+  width: 1400px;
+  margin: 0 auto;
+  border-radius: 20px;
+  position: absolute;
+  display: flex;
+  height: 842px;
+  overflow: hidden;
+  top: -346px;
+  left: 0px;
+  right: 0px;
+}
+.form__contacts {
+  height: 842px;
+  width: 700px;
+  background-color: #F9F9F9;
+}
+.form .contacts {
+  padding-top: 100px;
+  padding-left: 100px;
+}
+.form .contacts__header {
+  height: 91px;
+  width: 473px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  margin-bottom: 47.17px;
+}
+.form .contacts__title {
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 50px;
+  color: #292D32;
+}
+.form .contacts__description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #838383;
+}
+.form .contacts__list {
+  width: 413px;
+  height: 393px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 61px;
+}
+.form .contacts__list .item {
+  width: 410px;
+  height: 103px;
+}
+.form .contacts__list .item__wrapper {
+  display: flex;
+  align-items: center;
+}
+.form .contacts__list .item__wrapper--email {
+  padding-top: 4px;
+}
+.form .contacts__list .item__icon-wrapper {
+  height: 38px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s;
+}
+.form .contacts__list .item__icon-wrapper:hover {
+  transform: scale(1.1);
+}
+.form .contacts__list .item__icon-wrapper:active {
+  transform: scale(0.925);
+}
+.form .contacts__list .item__icon {
+  margin-right: 18px;
+}
+.form .contacts__list .item__icon:hover {
+  transform: scale(1.1);
+}
+.form .contacts__list .item__title {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  color: #838383;
+}
+.form .contacts__list .item__info {
+  padding-top: 0px;
+  padding-left: 56px;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 33px;
+  color: #292D32;
+}
+.form .contacts .social {
+  width: 96.71px;
+  height: 37.71px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 3px;
+}
+.form .contacts .social__icon {
+  transition: 0.4s;
+  height: 37.71px;
+  cursor: pointer;
+}
+.form .contacts .social__icon:hover {
+  transform: scale(1.1);
+}
+.form .contacts .social__icon:active {
+  transform: scale(0.925);
+}
+.form__request {
+  width: 700px;
+  background-color: #292D32;
 }/*# sourceMappingURL=styles.css.map */
