feat: finish form and add footer section

--- a/styles.sass
+++ b/styles.sass
@@ -46,6 +46,16 @@ body
             justify-content: space-between
             align-items: center
             position: relative
+            &__icon--second
+                padding-left: 1px
+                padding-top: 1px
+            &__icon--therd
+                padding-top: 1px
+                padding-left: 1px
+                width: 25px
+            &__icon--fourth
+                margin-left: 2.92px
+                width: 22.09px
             &__item
                 background-color: #F9F9F9
                 width: 49px
@@ -147,19 +157,6 @@ body
                     line-height: 59px
                     color: #292D32
                     margin-bottom: 60px
-    
-    // @keyframes move-right
-    // 0%
-    //     left:-1080px  
-    // 100%
-    //     left:-2160px
-
-    // @keyframes move-left
-    //     0%
-    //         left:-1080px
-            
-    //     100%
-    //         left: 0px
 
     .controller
         display: flex
@@ -380,10 +377,12 @@ body
         .card
             width: 330px
             height: 289px
-            background: #292D32
+            background-color: #292D32
             border-radius: 20px
             position: relative
             font-family: 'Euclid Circular A'
+            &:hover
+                background-color: #17191c
             &__backgraund-img
                 position: absolute
                 right: 0px
@@ -570,6 +569,10 @@ body
         width: 1920px
         margin: 0 auto
         position: relative
+    &__backgraund
+        position: absolute
+        left: 11px
+        top: 199px
     &__content
         width: 1400px
         margin: 0 auto
@@ -588,6 +591,11 @@ body
     .contacts
         padding-top: 100px
         padding-left: 100px
+        &__decoration-img
+            height: 590.13px
+            top: 141.32px
+            left: 492px
+            position: absolute
         &__header
             height: 91px
             width: 473px
@@ -615,11 +623,15 @@ body
             .item
                 width: 410px
                 height: 103px
+                &--email
+                    .item__info
+                        margin-top: 1px
+                        padding-left: 57px
                 &__wrapper
                     display: flex
                     align-items: center
                     &--email
-                        padding-top:4px
+                        padding-top:2px    
                 &__icon-wrapper
                     height: 38px
                     display: flex
@@ -630,8 +642,20 @@ body
                         transform: scale(1.1)
                     &:active
                         transform: scale(0.925)
+                    &--location
+                        padding-top: 2px
+                        padding-left: 1px
+                        margin-right: 17px
+                    &--mail
+                        padding-top: 5px
+                        padding-left: 2px
+                        margin-right: 18px
+                    &--tel
+                        padding-top: 0px
+                        padding-left: 2px
+                        margin-right: 18px
+
                 &__icon
-                    margin-right: 18px
                     &:hover
                         transform: scale(1.1)
                 &__title
@@ -647,12 +671,11 @@ body
                     line-height: 33px
                     color: #292D32
         .social
-            width: 96.71px
+            width: 93.71px
             height: 37.71px
             display: flex
             justify-content: space-between
-            align-items: center
-            padding-left: 3px
+            margin-left: 3.9px
             &__icon
                 transition: 0.4s
                 height: 37.71px
@@ -682,7 +705,7 @@ body
             font-size: 16px
             line-height: 150%
             color: #FFFFFF
-        &__contant
+        &__content
             height: 369.22px
             display: flex
             justify-content: space-between
@@ -701,6 +724,7 @@ body
             color: #F2F2F2
             background-color: #292D32
             border: 10px solid #292D32
+            border-bottom: 0px
             z-index: 1
             display: inline-block
             width: fit-content
@@ -718,7 +742,6 @@ body
                 letter-spacing: 0.2px
         &__input
             caret-color: rgba(242, 242, 242, 0.5)
-            caret-shape: rectangle
             width: 434px
             height: 59.25px
             border: 1.5px solid rgba(242, 242, 242, 0.5)
@@ -737,3 +760,110 @@ body
                 margin-bottom: 57px
         .link__description
             color: #FFFFFF
+
+.footer
+    width: 100%
+    background-color: #FFFFFF
+    height: 438px
+    &__wrapper
+        background-color: #FFFFFF
+        width: 1920px
+        margin: 0 auto
+    &__content
+        width: 1400px
+        margin: 0 auto
+
+        display: flex
+        flex-direction: column
+    &__logo
+        height: 112px
+        margin-top: 29px
+        padding-right: 10px
+        cursor: pointer
+    .nav
+        display: flex
+        gap: 180px
+        margin-top: 59px
+        padding-bottom: 60px
+        border-bottom: 1px solid #E5E5E5
+        &__list-wrapper
+            display: flex
+            flex-direction: column
+            &--second
+                padding-left: 5px
+        &__list-title
+            font-weight: 400
+            font-size: 25px
+            line-height: 29px
+            color: #292D32
+            margin-bottom: 15px
+            &--first
+                padding-left: 1px
+            &--third
+                padding-left: 1px
+        &__list
+            display: flex
+            flex-direction: column
+            gap: 10px
+        &__item
+            cursor: pointer
+            font-style: normal
+            font-weight: 400
+            font-size: 16px
+            line-height: 19px   
+            color: #292D32
+            letter-spacing: 0.19px
+            &:hover
+                color: #000000
+                transform: scale(1.05)
+    .contact-us
+        margin: 0 auto
+        width: 100%
+        height: 139px
+        &__item
+            height: 59px
+            display: flex
+            flex-direction: column
+            &--first
+                margin-right: 154px
+            &--second
+                margin-right: 153.26px
+            &--third
+                margin-right: 153.74px
+                .contact-us__title
+                    margin-top: -6px
+                    margin-bottom: 12px
+        &__title
+            font-weight: 400
+            font-size: 16px
+            line-height: 21px
+            color: #838383
+            margin-bottom: 11px
+        &__description
+            font-weight: 400
+            font-size: 18px
+            line-height: 27px
+            cursor: pointer
+            &:hover
+                font-weight: 600
+        &__list
+            margin-top: 40px
+            width: 100%
+            display: flex
+            flex-direction: row
+            justify-content: space-between
+            align-items: center
+            .social
+                margin-top: 7px
+                width: 92.71px
+                height: 37.71px
+                display: flex
+                justify-content: space-between
+                &__icon
+                    transition: 0.4s
+                    &:hover
+                        transform: scale(1.1)
+                    &:active
+                        transform: scale(0.925) 
+                &__icon:last-child
+                    margin-right:-2px
