--- a/styles/styles.css
+++ b/styles/styles.css
@@ -201,6 +201,19 @@ body {
   align-items: center;
   position: relative;
 }
+.header__nav-bar .nav-icons__icon--second {
+  padding-left: 1px;
+  padding-top: 1px;
+}
+.header__nav-bar .nav-icons__icon--therd {
+  padding-top: 1px;
+  padding-left: 1px;
+  width: 25px;
+}
+.header__nav-bar .nav-icons__icon--fourth {
+  margin-left: 2.92px;
+  width: 22.09px;
+}
 .header__nav-bar .nav-icons__item {
   background-color: #F9F9F9;
   width: 49px;
@@ -573,10 +586,13 @@ body {
 .benefits__cards .card {
   width: 330px;
   height: 289px;
-  background: #292D32;
+  background-color: #292D32;
   border-radius: 20px;
   position: relative;
   font-family: "Euclid Circular A";
+}
+.benefits__cards .card:hover {
+  background-color: #17191c;
 }
 .benefits__cards .card__backgraund-img {
   position: absolute;
@@ -799,6 +815,11 @@ body {
   margin: 0 auto;
   position: relative;
 }
+.about-us__backgraund {
+  position: absolute;
+  left: 11px;
+  top: 199px;
+}
 .about-us__content {
   width: 1400px;
   margin: 0 auto;
@@ -819,6 +840,12 @@ body {
 .about-us .contacts {
   padding-top: 100px;
   padding-left: 100px;
+}
+.about-us .contacts__decoration-img {
+  height: 590.13px;
+  top: 141.32px;
+  left: 492px;
+  position: absolute;
 }
 .about-us .contacts__header {
   height: 91px;
@@ -852,12 +879,16 @@ body {
   width: 410px;
   height: 103px;
 }
+.about-us .contacts__list .item--email .item__info {
+  margin-top: 1px;
+  padding-left: 57px;
+}
 .about-us .contacts__list .item__wrapper {
   display: flex;
   align-items: center;
 }
 .about-us .contacts__list .item__wrapper--email {
-  padding-top: 4px;
+  padding-top: 2px;
 }
 .about-us .contacts__list .item__icon-wrapper {
   height: 38px;
@@ -872,7 +903,19 @@ body {
 .about-us .contacts__list .item__icon-wrapper:active {
   transform: scale(0.925);
 }
-.about-us .contacts__list .item__icon {
+.about-us .contacts__list .item__icon-wrapper--location {
+  padding-top: 2px;
+  padding-left: 1px;
+  margin-right: 17px;
+}
+.about-us .contacts__list .item__icon-wrapper--mail {
+  padding-top: 5px;
+  padding-left: 2px;
+  margin-right: 18px;
+}
+.about-us .contacts__list .item__icon-wrapper--tel {
+  padding-top: 0px;
+  padding-left: 2px;
   margin-right: 18px;
 }
 .about-us .contacts__list .item__icon:hover {
@@ -893,12 +936,11 @@ body {
   color: #292D32;
 }
 .about-us .contacts .social {
-  width: 96.71px;
+  width: 93.71px;
   height: 37.71px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding-left: 3px;
+  margin-left: 3.9px;
 }
 .about-us .contacts .social__icon {
   transition: 0.4s;
@@ -936,7 +978,7 @@ body {
   line-height: 150%;
   color: #FFFFFF;
 }
-.about-us .request__contant {
+.about-us .request__content {
   height: 369.22px;
   display: flex;
   justify-content: space-between;
@@ -957,6 +999,7 @@ body {
   color: #F2F2F2;
   background-color: #292D32;
   border: 10px solid #292D32;
+  border-bottom: 0px;
   z-index: 1;
   display: inline-block;
   width: -moz-fit-content;
@@ -979,7 +1022,6 @@ body {
 }
 .about-us .request__input {
   caret-color: rgba(242, 242, 242, 0.5);
-  caret-shape: rectangle;
   width: 434px;
   height: 59.25px;
   border: 1.5px solid rgba(242, 242, 242, 0.5);
@@ -1000,4 +1042,138 @@ body {
 }
 .about-us .request .link__description {
   color: #FFFFFF;
+}
+
+.footer {
+  width: 100%;
+  background-color: #FFFFFF;
+  height: 438px;
+}
+.footer__wrapper {
+  background-color: #FFFFFF;
+  width: 1920px;
+  margin: 0 auto;
+}
+.footer__content {
+  width: 1400px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+.footer__logo {
+  height: 112px;
+  margin-top: 29px;
+  padding-right: 10px;
+  cursor: pointer;
+}
+.footer .nav {
+  display: flex;
+  gap: 180px;
+  margin-top: 59px;
+  padding-bottom: 60px;
+  border-bottom: 1px solid #E5E5E5;
+}
+.footer .nav__list-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.footer .nav__list-wrapper--second {
+  padding-left: 5px;
+}
+.footer .nav__list-title {
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 29px;
+  color: #292D32;
+  margin-bottom: 15px;
+}
+.footer .nav__list-title--first {
+  padding-left: 1px;
+}
+.footer .nav__list-title--third {
+  padding-left: 1px;
+}
+.footer .nav__list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.footer .nav__item {
+  cursor: pointer;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+  color: #292D32;
+  letter-spacing: 0.19px;
+}
+.footer .nav__item:hover {
+  color: #000000;
+  transform: scale(1.05);
+}
+.footer .contact-us {
+  margin: 0 auto;
+  width: 100%;
+  height: 139px;
+}
+.footer .contact-us__item {
+  height: 59px;
+  display: flex;
+  flex-direction: column;
+}
+.footer .contact-us__item--first {
+  margin-right: 154px;
+}
+.footer .contact-us__item--second {
+  margin-right: 153.26px;
+}
+.footer .contact-us__item--third {
+  margin-right: 153.74px;
+}
+.footer .contact-us__item--third .contact-us__title {
+  margin-top: -6px;
+  margin-bottom: 12px;
+}
+.footer .contact-us__title {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 21px;
+  color: #838383;
+  margin-bottom: 11px;
+}
+.footer .contact-us__description {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  cursor: pointer;
+}
+.footer .contact-us__description:hover {
+  font-weight: 600;
+}
+.footer .contact-us__list {
+  margin-top: 40px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer .contact-us__list .social {
+  margin-top: 7px;
+  width: 92.71px;
+  height: 37.71px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer .contact-us__list .social__icon {
+  transition: 0.4s;
+}
+.footer .contact-us__list .social__icon:hover {
+  transform: scale(1.1);
+}
+.footer .contact-us__list .social__icon:active {
+  transform: scale(0.925);
+}
+.footer .contact-us__list .social__icon:last-child {
+  margin-right: -2px;
 }/*# sourceMappingURL=styles.css.map */
