feat: add links and ids

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -147,6 +147,10 @@ a {
   text-decoration: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Roboto";
   font-weight: 400;
