--- a/styles.sass
+++ b/styles.sass
@@ -13,6 +13,10 @@ body
     background: #969696
 
 .header
+    top: 0px
+    position: fixed
+    z-index: 4
+    box-shadow: 0 1px 4px rgba(0,0,0,0.1)
     width: 100%
     background: #FFFFFF
     height: 123px
@@ -76,9 +80,6 @@ body
                 border-radius: 50%
                 background-color: #48A4EB
                 color: #FFFFFF
-                display: flex
-                justify-content: center
-                align-items: center
                 
                 font-weight: 700
                 font-size: 12px
@@ -88,7 +89,11 @@ body
                 right: 0px
                 top: -1px
 
+                display: flex
+                align-items: center
+                justify-content: center
 .slider
+    margin-top: 123px
     width: 100%
     height: 683px
     background-color: #F2F2F2
@@ -176,7 +181,7 @@ body
             border-radius: 50%
             background-color: #D0D0D0
             cursor: pointer
-            transition: 0.6s
+            transition: 0.3s
             &:hover
                 transform: scale(1.3)
                 background-color: #292d32a9
@@ -222,6 +227,8 @@ body
     display: flex
     align-items: center
     z-index: 3
+    background: inherit
+    border: 0px
     &__button
         width: 55px
         height: 55px
@@ -744,6 +751,7 @@ body
                 left: 17px
                 letter-spacing: 1px
                 letter-spacing: 0.2px
+                
         &__input
             caret-color: rgba(242, 242, 242, 0.5)
             width: 434px
@@ -754,6 +762,10 @@ body
             color: rgba(242, 242, 242, 0.8)
             font-size: 23px
             padding-left: 16px
+            &--error
+                border: 2px solid rgba(255, 75, 75, 0.5)
+            &--correct
+                border: 2px solid rgba(2, 207, 9, 0.5)
             &--comment
                 padding-top: 16px
                 height: 145.25px
@@ -769,14 +781,14 @@ body
     width: 100%
     background-color: #FFFFFF
     height: 438px
-    &__wrapper
-        background-color: #FFFFFF
-        width: 1920px
-        margin: 0 auto
+    // &__wrapper
+    //     background-color: #FFFFFF
+    //     width: 1920px
+    //     margin: 0 auto
     &__content
         width: 1400px
         margin: 0 auto
-
+        background-color: #FFFFFF
         display: flex
         flex-direction: column
     &__logo
