--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,6 +160,10 @@ body {
 }
 
 .header {
+  top: 0px;
+  position: fixed;
+  z-index: 4;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
   width: 100%;
   background: #FFFFFF;
   height: 123px;
@@ -235,18 +239,19 @@ body {
   border-radius: 50%;
   background-color: #48A4EB;
   color: #FFFFFF;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   font-weight: 700;
   font-size: 12px;
   line-height: 14px;
   position: absolute;
   right: 0px;
   top: -1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .slider {
+  margin-top: 123px;
   width: 100%;
   height: 683px;
   background-color: #F2F2F2;
@@ -347,7 +352,7 @@ body {
   border-radius: 50%;
   background-color: #D0D0D0;
   cursor: pointer;
-  transition: 0.6s;
+  transition: 0.3s;
 }
 .slider .controller__button:hover {
   transform: scale(1.3);
@@ -400,6 +405,8 @@ body {
   display: flex;
   align-items: center;
   z-index: 3;
+  background: inherit;
+  border: 0px;
 }
 .link__button {
   width: 55px;
@@ -1035,6 +1042,12 @@ body {
   font-size: 23px;
   padding-left: 16px;
 }
+.about-us .request__input--error {
+  border: 2px solid rgba(255, 75, 75, 0.5);
+}
+.about-us .request__input--correct {
+  border: 2px solid rgba(2, 207, 9, 0.5);
+}
 .about-us .request__input--comment {
   padding-top: 16px;
   height: 145.25px;
@@ -1053,14 +1066,10 @@ body {
   background-color: #FFFFFF;
   height: 438px;
 }
-.footer__wrapper {
-  background-color: #FFFFFF;
-  width: 1920px;
-  margin: 0 auto;
-}
 .footer__content {
   width: 1400px;
   margin: 0 auto;
+  background-color: #FFFFFF;
   display: flex;
   flex-direction: column;
 }
