feat: add 1/2 adaptivity for mobile (365px)

--- a/styles.sass
+++ b/styles.sass
@@ -1,5 +1,6 @@
 @import "./reset"
 
+
 html
     scroll-behavior: smooth
 
@@ -215,6 +216,8 @@ body
             top: 0px
             position: absolute
             width: 509px
+            &--two
+                display: none
         &__title
             font-size: 25px
             line-height: 32px
